--- a/Project/Qt projecten/connectDatabase/mainwindow.ui
+++ b/Project/Qt projecten/connectDatabase/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1213</width>
-    <height>637</height>
+    <height>667</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -23,7 +23,7 @@
    <widget class="QTabWidget" name="tabWidget">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>13</x>
       <y>0</y>
       <width>1191</width>
       <height>615</height>
@@ -188,6 +188,15 @@
         <month>1</month>
         <day>1</day>
        </datetime>
+      </property>
+      <property name="currentSection">
+       <enum>QDateTimeEdit::DaySection</enum>
+      </property>
+      <property name="displayFormat">
+       <string>dd-MM-yyyy</string>
+      </property>
+      <property name="calendarPopup">
+       <bool>true</bool>
       </property>
       <property name="date">
        <date>
@@ -399,7 +408,7 @@
       <property name="geometry">
        <rect>
         <x>175</x>
-        <y>407</y>
+        <y>470</y>
         <width>101</width>
         <height>32</height>
        </rect>
@@ -421,6 +430,9 @@
         <width>101</width>
         <height>32</height>
        </size>
+      </property>
+      <property name="cursor">
+       <cursorShape>ArrowCursor</cursorShape>
       </property>
       <property name="text">
        <string>Start</string>
@@ -444,6 +456,9 @@
         <month>1</month>
         <day>1</day>
        </datetime>
+      </property>
+      <property name="calendarPopup">
+       <bool>false</bool>
       </property>
       <property name="time">
        <time>
@@ -704,6 +719,12 @@
         <day>2</day>
        </datetime>
       </property>
+      <property name="displayFormat">
+       <string>dd-MM-yyyy</string>
+      </property>
+      <property name="calendarPopup">
+       <bool>true</bool>
+      </property>
       <property name="date">
        <date>
         <year>2014</year>
@@ -712,11 +733,126 @@
        </date>
       </property>
      </widget>
+     <widget class="QLabel" name="Text_timeslot">
+      <property name="geometry">
+       <rect>
+        <x>130</x>
+        <y>410</y>
+        <width>61</width>
+        <height>22</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Timeslot:</string>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="comboTime">
+      <property name="geometry">
+       <rect>
+        <x>190</x>
+        <y>410</y>
+        <width>101</width>
+        <height>22</height>
+       </rect>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="tab_2">
      <attribute name="title">
       <string>RAW data</string>
      </attribute>
+     <widget class="QTableView" name="tableSensors">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>4</y>
+        <width>1163</width>
+        <height>279</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QTableView" name="tableRawData">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>290</y>
+        <width>1163</width>
+        <height>278</height>
+       </rect>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="tab_3">
+     <attribute name="title">
+      <string>Converted data</string>
+     </attribute>
+     <widget class="QTableView" name="tableConvertedData">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>53</y>
+        <width>1163</width>
+        <height>521</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushExportCSV">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>541</x>
+        <y>10</y>
+        <width>101</width>
+        <height>32</height>
+       </rect>
+      </property>
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>101</width>
+        <height>32</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>101</width>
+        <height>32</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>Export to CSV</string>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="comboExportDelim">
+      <property name="geometry">
+       <rect>
+        <x>398</x>
+        <y>15</y>
+        <width>101</width>
+        <height>22</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_11">
+      <property name="geometry">
+       <rect>
+        <x>330</x>
+        <y>15</y>
+        <width>61</width>
+        <height>22</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Delimiter:</string>
+      </property>
+     </widget>
     </widget>
    </widget>
   </widget>
